sna: Reorder output array to match primary placement for InitialConfiguration

xf86InitialConfiguration() depends upon the order of the outputs for its
mode selection and expects the Primary output to be listed first.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82205
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>